--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bedenes.io</title>
+    <title>Guillaume BEDENES</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
