[ADD]: Ajout des compétences

--- a/index.html
+++ b/index.html
@@ -33,10 +33,101 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="competences">
                     <div class="terminal-window">
-                        <pre class="terminal-text" data-i18n="skills-content">
-$ cat competences.txt
-Loading...
-                        </pre>
+                        <div class="skills-content">
+                            <pre class="terminal-text" data-i18n="skills-command">$ cat competences.txt</pre>
+                            <div class="skills-container" id="skills-container-fr">
+                                <div class="skill-category">
+                                    <h3 class="category-title">⌨️ Programmation</h3>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Langages</h4>
+                                        <div class="skill-item"><span class="skill-name">C#</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">C</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">C++</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Python</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">SQL</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">JavaScript</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Frameworks & technologies</h4>
+                                        <div class="skill-item"><span class="skill-name">Unity</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">WPF</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">UWP</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">WinDev</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">SFML</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Monogame</span><span class="skill-level level-2"></span></div>
+                                    </div>
+                                </div>
+                                <div class="skill-category">
+                                    <h3 class="category-title">🖥️ Environnements & outils</h3>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Systèmes</h4>
+                                        <div class="skill-item"><span class="skill-name">Windows</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Linux (Arch Linux, i3wm)</span><span class="skill-level level-2"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Outils de gestion de projet</h4>
+                                        <div class="skill-item"><span class="skill-name">Obsidian</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Git</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">GitLab</span><span class="skill-level level-1"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Azure DevOps</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Outils d'édition</h4>
+                                        <div class="skill-item"><span class="skill-name">Cursor</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Visual Studio</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Emacs</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Vim</span><span class="skill-level level-1"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Nano</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skills-container" id="skills-container-en" style="display: none;">
+                                <div class="skill-category">
+                                    <h3 class="category-title">⌨️ Programming</h3>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Languages</h4>
+                                        <div class="skill-item"><span class="skill-name">C#</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">C</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">C++</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Python</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">SQL</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">JavaScript</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Frameworks & technologies</h4>
+                                        <div class="skill-item"><span class="skill-name">Unity</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">WPF</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">UWP</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">WinDev</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">SFML</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Monogame</span><span class="skill-level level-2"></span></div>
+                                    </div>
+                                </div>
+                                <div class="skill-category">
+                                    <h3 class="category-title">🖥️ Environments & tools</h3>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Systems</h4>
+                                        <div class="skill-item"><span class="skill-name">Windows</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Linux (Arch Linux, i3wm)</span><span class="skill-level level-2"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Project management tools</h4>
+                                        <div class="skill-item"><span class="skill-name">Obsidian</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Git</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">GitLab</span><span class="skill-level level-1"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Azure DevOps</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                    <div class="skill-section">
+                                        <h4 class="section-title">Editing tools</h4>
+                                        <div class="skill-item"><span class="skill-name">Cursor</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Visual Studio</span><span class="skill-level level-3"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Emacs</span><span class="skill-level level-2"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Vim</span><span class="skill-level level-1"></span></div>
+                                        <div class="skill-item"><span class="skill-name">Nano</span><span class="skill-level level-1"></span></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
