[FIX] : chemin relatif

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guillaume BEDENES</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
     <canvas id="particles-canvas"></canvas>
@@ -15,8 +15,8 @@
                 <button class="lang-btn active" data-lang="fr">FR</button>
                 <button class="lang-btn" data-lang="en">EN</button>
             </div>
-            <a href="documents/cv.pdf" download="CV_BEDENES_Guillaume.pdf" class="cv-btn" data-i18n="cv-button">CV</a>
-            <img src="images/Profile.jpg" alt="Profil" class="profile-image" />
+            <a href="./documents/cv.pdf" download="CV_BEDENES_Guillaume.pdf" class="cv-btn" data-i18n="cv-button">CV</a>
+            <img src="./images/Profile.jpg" alt="Profil" class="profile-image" />
             <div class="profile-info">
                 <h1 data-i18n="name">BEDENES Guillaume</h1>
                 <p class="email"><a href="mailto:guillaume.bedenes@epitech.eu" data-i18n="email">guillaume.bedenes@epitech.eu</a></p>
@@ -143,6 +143,6 @@ Loading...
         </main>
     </div>
     
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
