[ADD]: dernier ajustement visuel pour la game dev Timeline

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="content-area">
             <div class="tabs">
                 <button class="tab active" data-tab="competences" data-i18n="tab-skills">Compétences</button>
-                <button class="tab" data-tab="timeline" data-i18n="tab-timeline">Project timeline</button>
+                <button class="tab" data-tab="timeline" data-i18n="tab-timeline">Game Dev Timeline</button>
             </div>
             
             <div class="tab-content">
