[ADD] ajout de la galerie à la timeline

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="lang-btn" data-lang="en">EN</button>
             </div>
             <a href="./documents/cv.pdf" download="CV_BEDENES_Guillaume.pdf" class="cv-btn" data-i18n="cv-button">CV</a>
-            <img src="./images/Profile.jpg" alt="Profil" class="profile-image" />
+            <img src="./assets/images/Profile.jpg" alt="Profil" class="profile-image" />
             <div class="profile-info">
                 <h1 data-i18n="name">BEDENES Guillaume</h1>
                 <p class="email"><a href="mailto:guillaume.bedenes@epitech.eu" data-i18n="email">guillaume.bedenes@epitech.eu</a></p>
@@ -167,11 +167,21 @@
                                     </div>
                                     <div class="timeline-details-card" id="timeline-details-fr">
                                         <div class="timeline-details-content">
-                                            <div class="timeline-details-year" id="details-year-fr"></div>
-                                            <h3 class="timeline-details-title" id="details-title-fr"></h3>
-                                            <p class="timeline-details-desc" id="details-desc-fr"></p>
-                                            <div class="timeline-details-tech" id="details-tech-fr"></div>
-                                            <div class="timeline-media" id="details-media-fr"></div>
+                                            <div class="timeline-details-left">
+                                                <div class="timeline-details-year" id="details-year-fr"></div>
+                                                <h3 class="timeline-details-title" id="details-title-fr"></h3>
+                                                <p class="timeline-details-desc" id="details-desc-fr"></p>
+                                                <div class="timeline-details-tech" id="details-tech-fr"></div>
+                                            </div>
+                                            <div class="timeline-media" id="details-media-fr">
+                                                <div class="gallery-container">
+                                                    <div class="gallery-main">
+                                                        <img id="gallery-main-img-fr" src="" alt="" style="display: none;">
+                                                        <div class="gallery-placeholder" id="gallery-placeholder-fr">ICI</div>
+                                                    </div>
+                                                    <div class="gallery-thumbnails" id="gallery-thumbnails-fr"></div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -206,11 +216,21 @@
                                     </div>
                                     <div class="timeline-details-card" id="timeline-details-en">
                                         <div class="timeline-details-content">
-                                            <div class="timeline-details-year" id="details-year-en"></div>
-                                            <h3 class="timeline-details-title" id="details-title-en"></h3>
-                                            <p class="timeline-details-desc" id="details-desc-en"></p>
-                                            <div class="timeline-details-tech" id="details-tech-en"></div>
-                                            <div class="timeline-media" id="details-media-en"></div>
+                                            <div class="timeline-details-left">
+                                                <div class="timeline-details-year" id="details-year-en"></div>
+                                                <h3 class="timeline-details-title" id="details-title-en"></h3>
+                                                <p class="timeline-details-desc" id="details-desc-en"></p>
+                                                <div class="timeline-details-tech" id="details-tech-en"></div>
+                                            </div>
+                                            <div class="timeline-media" id="details-media-en">
+                                                <div class="gallery-container">
+                                                    <div class="gallery-main">
+                                                        <img id="gallery-main-img-en" src="" alt="" style="display: none;">
+                                                        <div class="gallery-placeholder" id="gallery-placeholder-en">HERE</div>
+                                                    </div>
+                                                    <div class="gallery-thumbnails" id="gallery-thumbnails-en"></div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
