[FIX] : Gallerie sur site non fonctionnelle

--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
                                                 <div class="gallery-container">
                                                     <div class="gallery-main">
                                                         <img id="gallery-main-img-fr" src="" alt="" style="display: none;">
-                                                        <div class="gallery-placeholder" id="gallery-placeholder-fr">ICI</div>
+                                                        <div class="gallery-placeholder" id="gallery-placeholder-fr" aria-hidden="true">
+                                                            <span class="gallery-placeholder-icon" aria-hidden="true"></span>
+                                                            <span class="gallery-placeholder-text">Aucune image</span>
+                                                        </div>
                                                     </div>
                                                     <div class="gallery-thumbnails" id="gallery-thumbnails-fr"></div>
                                                 </div>
@@ -226,7 +229,10 @@
                                                 <div class="gallery-container">
                                                     <div class="gallery-main">
                                                         <img id="gallery-main-img-en" src="" alt="" style="display: none;">
-                                                        <div class="gallery-placeholder" id="gallery-placeholder-en">HERE</div>
+                                                        <div class="gallery-placeholder" id="gallery-placeholder-en" aria-hidden="true">
+                                                            <span class="gallery-placeholder-icon" aria-hidden="true"></span>
+                                                            <span class="gallery-placeholder-text">No images</span>
+                                                        </div>
                                                     </div>
                                                     <div class="gallery-thumbnails" id="gallery-thumbnails-en"></div>
                                                 </div>
